# AVScanner

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  x_test.py
src/AVScanner/: AVScanner.py
src/AVScanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/AVScanner/ui/: __init__.py  avscanner.py  avscanner_ui.py  avscanner_ui_old.py
src/ui/: avscanner_ui.py  avscanner_ui.ui
x_img/: AVScanner.drawio
