[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AVScanner"
version = "2023.0.0"
description = "ClamAV Frontend for Mac"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Wolf Rogner", email = "war@rsb.at"},
]
maintainers = [
    {name = "Wolf Rogner", email = "war@rsb.at"},
]
keywords = ["Antivirus", "ClamAV", "MacOS"]
dependencies = ["pillow", "customtkinter"]